stylesheet: fix dropdown triangle overflowing

--- a/app/assets/stylesheets/new_design/buttons.scss
+++ b/app/assets/stylesheets/new_design/buttons.scss
@@ -137,6 +137,8 @@
   position: relative;
 
   .dropdown-button {
+    white-space: nowrap;
+
     &::after {
       content: "▾";
       margin-left: $default-spacer;
